--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 
 dependencies:
   flutter_acrylic: ^1.1.0
-  flutter_html: ^2.2.1
+  flutter_html: ^3.0.0-beta.2
+
   fluent_ui: ^4.6.2
   go_router: ^8.1.0
 
