--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   system_theme: ^2.2.0
   logger: ^1.4.0
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
